Basic struct {Add}

--- a/index.html
+++ b/index.html
@@ -1,4 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+<head>
+    <title>E-Paraggelia Application</title>
+    <link rel="stylesheet" type="text/css" href="/src/e-order.css">
+</head>
+
+<body>
+    <header>
+        <h1>Welcome to e-paraggelia!</h1>
+    </header>
+
+    <section id="category-list">
+        
+    </section>
+
+    <section id="product-list">
+
+    </section>
+
+    <section id="my-cart">
+
+    </section>
+
+    <footer>
+        <p>&copy; 2023 E-Order Application</p>
+    </footer>
+
+    <script src="src/e-order.js"></script>
+</body>
+
 </html>
