href linked properly

--- a/my-cart.html
+++ b/my-cart.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <title>My cart</title>
-    <link rel="stylesheet" type="text/css" href="e-order.css">
+    <link rel="stylesheet" type="text/css" href="/src/e-order.css">
 </head>
 <body>
     <h1>My Cart</h1>
     <ul id="cart-items"></ul>
 
-    <script src="e-order.js"></script>
+    <script src="/src/e-order.js"></script>
     <script>
         
         function displayCartItems() {
