--- a/my-cart.html
+++ b/my-cart.html
@@ -3,9 +3,11 @@
 <head>
     <title>My cart</title>
     <link rel="stylesheet" type="text/css" href="/src/e-order.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
     <h1>My Cart</h1>
+    <button onclick="redirectToMainPage()">Back to Home</button>
     <ul id="cart-items"></ul>
 
     <script src="/src/e-order.js"></script>
