--- a/my-cart.html
+++ b/my-cart.html
@@ -3,6 +3,7 @@
 <head>
     <title>My cart</title>
     <link rel="stylesheet" type="text/css" href="/src/e-order.css">
+    <link rel="icon" type="image/png" href="my-cart.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
