--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <header>
         <h1>Welcome to e-paraggelia!</h1>
+        <button id="clear-cart-button" onclick="clearCart()">
+            Clear Cart
+        </button>
     </header>
 
     <section id="category-list">
