Clear Cart Items {Add}

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Welcome to e-paraggelia!</h1>
         <button id="clear-cart-button" onclick="clearCart()">
-            Clear Cart
+            Clear My Cart
         </button>
     </header>
 
