Animations & color combinations {Add}

--- a/my-cart.html
+++ b/my-cart.html
@@ -65,5 +65,9 @@
         // Calling displayCartItems() when the my-cart.html loads
         window.addEventListener('DOMContentLoaded', displayCartItems);
     </script>
+
+    <footer>
+        <p>&copy; 2023 E-Paraggeliamou Application</p>
+    </footer>
 </body>
 </html>
