Buttons Animation and color combinations {Update}

--- a/my-cart.html
+++ b/my-cart.html
@@ -14,9 +14,7 @@
     <button id="return-to-main" onclick="redirectToMainPage()">Back to Home</button>
     <ul id="cart-items"></ul>
 
-    <!-- <button onclick="convertCartListToArray()">Convert to Array</button>
-    <button onclick="convertCartListToCSV()">Convert to CSV</button> -->
-    <button onclick="convertCartListToExcel()">Generate Excel file</button>
+    <button id="generateExcelBtn" onclick="convertCartListToExcel()">Generate Excel</button>
 
     <script src="/src/e-order.js"></script>
     <script>
@@ -32,23 +30,10 @@
                 cartItemsList.appendChild(listItem);
             });
         }
-
-        //Converting Cart List into an array
-        // function convertCartListToArray() {
-        //     const cartListArray = cartItems.map(item => [item.name, item.quantity]);
-        //     console.log(cartListArray);
-        // }
-        
-        //Converting Cart List into a csv file
-        // function convertCartListToCSV() {
-        //     const csvContent = cartItems.map(item => `${item.name},${item.quantity}`).join('\n');
-        //     const downloadLink = createDownloadLink(csvContent, 'cart-list.csv');
-        //     downloadLink.click();
-        // }
         
         //Converting Cart List into excel file
         function convertCartListToExcel() {
-            const csvContent = cartItems.map(item => `${item.name},${item.quantity}`).join('\n');
+            const csvContent = `Product,Quantity\n` + cartItems.map(item => `${item.name},${item.quantity}`).join('\n');
             const excelContent = `data:text/csv;charset=utf-8,\uFEFF${encodeURIComponent(csvContent)}`;
             const downloadLink = createDownloadLink(excelContent, 'cart-list.csv');
             downloadLink.click();
