--- a/my-cart.html
+++ b/my-cart.html
@@ -43,9 +43,19 @@
         
         //Converting Cart List into excel file
         function convertCartListToExcel() {
+            const currentDate = new Date();
+            const day = String(currentDate.getDate()).padStart(2, '0');
+            const month = String(currentDate.getMonth() + 1).padStart(2, '0');
+            const year = currentDate.getFullYear();
+            const fileName = `Order_${day}-${month}-${year}.csv`;
+
             const csvContent = `Product,Quantity\n` + cartItems.map(item => `${item.name},${item.quantity}`).join('\n');
             const excelContent = `data:text/csv;charset=utf-8,\uFEFF${encodeURIComponent(csvContent)}`;
-            const downloadLink = createDownloadLink(excelContent, 'cart-list.csv');
+
+            const downloadLink = createDownloadLink(excelContent, fileName);
+            downloadLink.style.display = 'none';
+            document.body.appendChild(downloadLink);
+
             downloadLink.click();
         }
 
