--- a/my-cart.html
+++ b/my-cart.html
@@ -14,6 +14,11 @@
     <button id="return-to-main" onclick="redirectToMainPage()">Back to Home</button>
     <ul id="cart-items"></ul>
 
+    <div id="downloadPopup">
+        <i class="fas fa-check"></i>
+        <p>Your order is ready!</p>
+    </div>
+
     <button id="generateExcelBtn" onclick="convertCartListToExcel()">Generate Excel</button>
 
     <script src="/src/e-order.js"></script>
@@ -57,6 +62,13 @@
             document.body.appendChild(downloadLink);
 
             downloadLink.click();
+
+            // Show download popup
+            const downloadPopup = document.getElementById('downloadPopup');
+            downloadPopup.style.display = 'flex';
+            setTimeout(() => {
+                downloadPopup.style.display = 'none';
+            }, 6000);
         }
 
         //Creating download link
