--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <p>&copy; 2023 E-Paraggeliamou Application</p>
     </footer>
 
+    <p id="welcome-message">Choose the desired category and let's start building your order!<br>We are here to help you create fast and easy your order.</p>
+
     <script src="src/e-order.js"></script>
 </body>
 
