Updated h1 color {Add}

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
     <header>
-        <h1>Welcome to e-paraggelia!</h1>
+        <h1 class="gradient-text">Welcome to e-paraggelia!</h1>
+        <br><br><br>
         <button id="clear-cart-button" onclick="clearCart()">
             Clear My Cart
         </button>
