--- a/my-cart.html
+++ b/my-cart.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
-    <h1>My Cart</h1>
+    <h1 class="gradient-text">My Cart</h1>
     <button id="clear-cart-button" onclick="clearCart()">
         Clear My Cart
     </button>
