footer message {Update}

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 E-Paraggeliamou Application</p>
+        <p>&copy; 2023 E-Paraggelia Application</p>
     </footer>
 
     <script src="src/e-order.js"></script>
