--- a/my-cart.html
+++ b/my-cart.html
@@ -11,7 +11,10 @@
     <button id="clear-cart-button" onclick="clearCart()">
         Clear My Cart
     </button>
-    <button id="return-to-main" onclick="redirectToMainPage()">Back to Home</button>
+    <button id="return-to-main" onclick="redirectToMainPage()">
+        <i class="fas fa-home"></i>
+    </button>
+    
     <ul id="cart-items"></ul>
 
     <div id="downloadPopup">
