Cart count {Add}

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <section id="my-cart">
         <button id="view-cart-button" onclick="viewCart()">
             <i class="fas fa-shopping-cart"></i>
+            <span id="cart-count"></span>
         </button>
     </section>
 
