Active Products function {Under construct}

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1 class="gradient-text">Welcome to e-paraggelia!</h1>
+        <h1 class="gradient-text">E-Paraggelia</h1>
         <br><br><br>
         <button id="clear-cart-button" onclick="clearCart()">
             Clear My Cart
@@ -28,6 +28,12 @@
         <button id="view-cart-button" onclick="viewCart()">
             <i class="fas fa-shopping-cart"></i>
             <span id="cart-count"></span>
+        </button>
+    </section>
+
+    <section id="activeProducts">
+        <button id="view-active-products" onclick="viewActiveProducts()">
+            <i class="fas fa-search"></i>
         </button>
     </section>
 
