Font family {Update}

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 class="gradient-text">E-Paraggelia</h1>
         <br><br><br>
         <button id="clear-cart-button" onclick="clearCart()">
-            Clear My Cart
+            Vanish My-cart
         </button>
     </header>
 
@@ -33,7 +33,7 @@
 
     <section id="activeProducts">
         <button id="view-active-products" onclick="viewActiveProducts()">
-            <i class="fas fa-search"></i>
+            <i class="fas fa-search"> Products</i>
         </button>
     </section>
 
