--- a/src/html_extensions/my-cart.html
+++ b/src/html_extensions/my-cart.html
@@ -9,7 +9,7 @@
 <body>
     <h1 class="gradient-text">My Cart</h1>
     <button id="clear-cart-button" onclick="clearCart()">
-        Clear My Cart
+        Vanish My-cart
     </button>
     <button id="return-to-main" onclick="redirectToMainPage()">
         <i class="fas fa-home"></i>
