Total & Unique products count {Add}

--- a/src/html_extensions/my-cart.html
+++ b/src/html_extensions/my-cart.html
@@ -17,6 +17,10 @@
     
     <ul id="cart-items"></ul>
 
+    <br>
+    <p id="total-products"></p>
+    <p id="unique-products"></p>
+
     <div id="downloadPopup">
         <i class="fas fa-check"></i>
         <p>Your order is ready!</p>
