Event listener for "Enter" keydown event {Add}

--- a/src/html_extensions/my-cart.html
+++ b/src/html_extensions/my-cart.html
@@ -26,6 +26,7 @@
         <p>Your order is ready!</p>
     </div>
 
+    <input type="text" id="CustomFileNameInput" placeholder="Enter custom file name">
     <button id="generateExcelBtn" onclick="convertCartListToExcel()">Generate Excel</button>
 
     <script src="../e-order.js"></script>
