Notification pop-up about product activity {Add}

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
     </section>
 
+    <div id="notification"></div>
+
     <section id="my-cart">
         <button id="view-cart-button" onclick="viewCart()">
             <i class="fas fa-shopping-cart"></i>
