Custom checkboxes for active-products {Add}

--- a/src/html_extensions/active-products.html
+++ b/src/html_extensions/active-products.html
@@ -23,9 +23,9 @@
     <script src="../e-order.js"></script>
     <script src="../js_extensions/active-products.js"></script>
 
-    <footer>
+    <!-- <footer>
         <p>&copy; 2023 E-Paraggelia Application</p>
-    </footer>
+    </footer> -->
 </body>
 
 </html>
