favicon for active-products {Update}

--- a/src/html_extensions/active-products.html
+++ b/src/html_extensions/active-products.html
@@ -4,6 +4,7 @@
 <head>
     <title>Active Products</title>
     <link rel="stylesheet" type="text/css" href="../e-order.css">
+    <link rel="icon" type="image/png" href="/images/update-products.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
