Cart Shake Animation {Add}

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div id="notification"></div>
 
-    <section id="my-cart">
+    <section id="my-cart" class="CartShake-animation">
         <button id="view-cart-button" onclick="viewCart()">
             <i class="fas fa-shopping-cart"></i>
             <span id="cart-count"></span>
