--- a/src/html_extensions/active-products.html
+++ b/src/html_extensions/active-products.html
@@ -12,6 +12,11 @@
     <button id="return-to-main" onclick="redirectToMainPage()">
         <i class="fas fa-home"></i>
     </button>
+
+    <button id="print-productList" onclick="printProductList()">
+        <i class="fas fa-print"></i>
+    </button>
+    
     <h1 class="gradient-text">Active Products</h1>
 
     <h2>All Products</h2>
@@ -23,6 +28,7 @@
 
     <script src="../e-order.js"></script>
     <script src="../js_extensions/active-products.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/docxtemplater@3.21.0/dist/docxtemplater.js"></script>
 
     <!-- <footer>
         <p>&copy; 2023 E-Paraggelia Application</p>
