Element's Positions {Fixed}

--- a/src/html_extensions/my-cart.html
+++ b/src/html_extensions/my-cart.html
@@ -32,8 +32,8 @@
     <script src="../e-order.js"></script>
     <script src="../js_extensions/my-cart.js"></script>
 
-    <footer>
+    <!-- <footer>
         <p>&copy; 2023 E-Paraggeliamou Application</p>
-    </footer>
+    </footer> -->
 </body>
 </html>
