Function for Product List download {Add}

--- a/src/html_extensions/active-products.html
+++ b/src/html_extensions/active-products.html
@@ -37,6 +37,9 @@
         </form>
     </div>
 
+    <!-- Generating a list with all the products and the category they belong to -->
+    <button id="generateListBtn" onclick="convertCartToExcelList()">Generate List</button>
+
     <!-- Connections between javascript files so all the functions run properly -->
     <script src="../e-order.js"></script>
     <script src="../js_extensions/active-products.js"></script>
